--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                   </svg>
                 <ul class="Boton-ul">
-                    <li class="Boton"><a href="#" class="Boton-a">Inicio</a></li>
-                    <li class="Boton"><a href="#" class="Boton-a">Tienda</a></li>
-                    <li class="Boton"><a href="#" class="Boton-a">Sobre nosotros</a></li>
-                    <li class="Boton"><a href="#" class="Boton-a">Contacto</a></li>
+                    <li class="Boton-li"><a href="index.html" class="Boton-a">Inicio</a></li>
+                    <li class="Boton-li"><a href="tienda.html" class="Boton-a">Tienda</a></li>
+                    <li class="Boton-li"><a href="#" class="Boton-a">Sobre nosotros</a></li>
+                    <li class="Boton-li"><a href="#" class="Boton-a">Contacto</a></li>
                 </ul>
             </div>
         </div>
