--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul class="Header-ul">
                     <li class="Header-li"><a href="index.html" class="Header-a">Inicio</a></li>
                     <li class="Header-li"><a href="tienda.html" class="Header-a">Tienda</a></li>
-                    <li class="Header-li"><a href="#" class="Header-a">Sobre nosotros</a></li>
+                    <li class="Header-li"><a href="sobrenosotros.html" class="Header-a">Sobre nosotros</a></li>
                     <li class="Header-li"><a href="#" class="Header-a">Contacto</a></li>
                 </ul>
             </nav>
@@ -29,7 +29,7 @@
                 <ul class="Boton-ul">
                     <li class="Boton-li"><a href="index.html" class="Boton-a">Inicio</a></li>
                     <li class="Boton-li"><a href="tienda.html" class="Boton-a">Tienda</a></li>
-                    <li class="Boton-li"><a href="#" class="Boton-a">Sobre nosotros</a></li>
+                    <li class="Boton-li"><a href="sobrenosotros.html" class="Boton-a">Sobre nosotros</a></li>
                     <li class="Boton-li"><a href="#" class="Boton-a">Contacto</a></li>
                 </ul>
             </div>
@@ -55,9 +55,8 @@
         <section class="Main-mapas Mapas">
             <h3 class="Mapas-h3">Comprueba algunos de nuestros mapas</h3>
             <div class="Mapas-carrousel Carrousel">
-                <div class="Carrousel-container">
                     <div class="Carrousel-slide">
-                        <div class="Carrousel-articulo Articulo">
+                        <article class="Carrousel-articulo Articulo">
                             <img src="assets/espanaantiguo.jpg" alt="Mapa de España antiguo" class="Articulo-img">
                             <div class="Articulo-wrap">
                                 <h4 class="Articulo-h4">Mapa España antiguo</h4>
@@ -67,8 +66,8 @@
                                 <h4 class="Articulo-h4">Precio</h4>
                                 <span class="Articulo-span">10 €</span>   
                             </div>
-                        </div>
-                        <div class="Carrousel-articulo Articulo">
+                        </article>
+                        <article class="Carrousel-articulo Articulo">
                             <img src="assets/europaantiguo.jpg" alt="Mapa de Europa antiguo" class="Articulo-img">
                             <div class="Articulo-wrap">
                                 <h4 class="Articulo-h4">Mapa Europa antiguo</h4>
@@ -78,8 +77,8 @@
                                 <h4 class="Articulo-h4">Precio</h4>
                                 <span class="Articulo-span">20 €</span>   
                             </div>
-                        </div>
-                        <div class="Carrousel-articulo Articulo">
+                        </article>
+                        <article class="Carrousel-articulo Articulo">
                             <img src="assets/mundifisico.jpg" alt="Mapamundi fisico" class="Articulo-img">
                             <div class="Articulo-wrap">
                                 <h4 class="Articulo-h4">Mapamundi fisico</h4>
@@ -89,9 +88,7 @@
                                 <h4 class="Articulo-h4">Precio</h4>
                                 <span class="Articulo-span">30 €</span>   
                             </div>
-                        </div>
-                    </div>
-                    
+                        </article>
                 </div>
                 <div class="Flecha">
                     <button class="Flecha-arrow Next">
@@ -111,13 +108,11 @@
                     <li class="Carrousel-li"><button class="Carrousel-point"></button></li>
                 </ul>
             </div>
-            
-            </div>
         </section>
     </main>
     <footer class="Footer">
         <div class="Footer-logo">Coordenadas y latitudes</div>
-        <div class="Footer-copy">Copyright Sean Fdez 2024</div>
+        <span class="Footer-copy">Copyright Sean Fdez 2024</span>
     </footer>
 </body>
 </html>
