mejoras en tamaños de imagen
Mejoras en tamaños de imagen

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -14,7 +14,9 @@
 
     <header class="Header">
         <div class="Header-wrap">
-            <h1 class="Header-h1">Coordenadas y Latitudes</h1>
+          <h1 class="Header-h1 Logo">
+            <img src="assets/logo.svg" alt="Coordenadas y Latitudes">
+          </h1>
             <nav class="Header-nav">
                 <ul class="Header-ul">
                     <li class="Header-li"><a href="index.html" class="Header-a">Inicio</a></li>
