--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -15,7 +15,7 @@
     <header class="Header">
         <div class="Header-wrap">
           <h1 class="Header-h1 Logo">
-            <img src="assets/logo.svg" alt="Coordenadas y Latitudes">
+            <img src="assets/logo.png" alt="Coordenadas y Latitudes">
           </h1>
             <nav class="Header-nav">
                 <ul class="Header-ul">
@@ -422,6 +422,7 @@
                 </div>
             </div>
         </section>
+    </main>
     <footer class="Footer">
         <div class="Footer-logo">Coordenadas y latitudes</div>
         <span class="Footer-copy">Copyright Sean Fdez 2024</span>
