--- a/tienda.html
+++ b/tienda.html
@@ -18,7 +18,7 @@
     <header class="Header">
         <div class="Header-wrap">
             <h1 class="Header-h1 Logo">
-              <img src="assets/logo.svg" alt="Coordenadas y Latitudes">
+              <img src="assets/logo.png" alt="Coordenadas y Latitudes">
             </h1>
             <nav class="Header-nav">
                 <ul class="Header-ul">
@@ -461,7 +461,7 @@
                     </svg>
             </button>
             <div class="Lightbox-wrap">
-                <img src="" alt="Imagen grande" class="Lightbox-img">
+                <img src="." alt="Imagen grande" class="Lightbox-img">
             </div>
             
         </div>
