--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="Header">
         <div class="Header-wrap">
             <h1 class="Header-h1 Logo">
-                <img src="assets/logo.svg" alt="Coordenadas y Latitudes">
+                <img src="assets/logo.png" alt="Coordenadas y Latitudes">
               </h1>
             <nav class="Header-nav">
                 <ul class="Header-ul">
