--- a/tienda.html
+++ b/tienda.html
@@ -25,7 +25,7 @@
                     <li class="Header-li"><a href="index.html" class="Header-a">Inicio</a></li>
                     <li class="Header-li"><a href="tienda.html" class="Header-a">Tienda</a></li>
                     <li class="Header-li"><a href="sobrenosotros.html" class="Header-a">Sobre nosotros</a></li>
-                    <li class="Header-li"><a href="#" class="Header-a">Contacto</a></li>
+                    <li class="Header-li"><a href="contacto.html" class="Header-a">Contacto</a></li>
                 </ul>
             </nav>
             <div class="Header-boton Boton">
@@ -38,7 +38,7 @@
                     <li class="Boton-li"><a href="index.html" class="Boton-a">Inicio</a></li>
                     <li class="Boton-li"><a href="tienda.html" class="Boton-a">Tienda</a></li>
                     <li class="Boton-li"><a href="sobrenosotros.html" class="Boton-a">Sobre nosotros</a></li>
-                    <li class="Boton-li"><a href="#" class="Boton-a">Contacto</a></li>
+                    <li class="Boton-li"><a href="contacto.html" class="Boton-a">Contacto</a></li>
                 </ul>
             </div>
             <div class="Header-cesta Cesta">
