--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coordenadas y Latitudes</title>
+    <meta name="title" content="Coordenadas y Latitudes" />
+    <meta name="description" content="Tienda no real. Proyecto para el portfolio de Sean Fdez. Tienda sobre mapas del mundo, de España y de Europa. " />
     <script src="js/index.js" defer></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
