Cambios en transition

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="es">
 
 <head>
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- Aqui va el header con el nav -->
     <header class="Header">
         <div class="Header-wrap">
             <h1 class="Header-h1 Logo">
@@ -47,6 +48,7 @@
         </div>
     </header>
     <main class="Main">
+<!-- Este es el hero, con un boton para ir directamente a la tienda -->
         <section class="Main-hero Hero">
             <div class="Hero-fondo">
                 <img src="assets/mapafondo.webp" alt="Fondo" class="Hero-img">
@@ -66,6 +68,7 @@
         </section>
         <section class="Main-mapas Mapas">
             <h3 class="Mapas-h3">Comprueba algunos de nuestros mapas</h3>
+            <!-- Aqui tenemos un carrousel con algunos de los mapas. -->
             <div class="Mapas-carrousel Carrousel">
                 <div class="Carrousel-slide">
                     <article class="Carrousel-articulo Articulo">
@@ -105,6 +108,7 @@
                         </div>
                     </article>
                 </div>
+                <!-- Estas son las flechas para ir cambiandolo -->
                 <div class="Flecha">
                     <button class="Flecha-arrow Next">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
