añadido loading lazy
añadido loading lazy

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="Mapas-carrousel Carrousel">
                 <div class="Carrousel-slide">
                     <article class="Carrousel-articulo Articulo">
-                        <img src="assets/espanaantiguo.jpg" alt="Mapa de España antiguo" class="Articulo-img">
+                        <img src="assets/espanaantiguo.jpg" alt="Mapa de España antiguo" class="Articulo-img" loading="lazy">
                         <div class="Articulo-wrap">
                             <h4 class="Articulo-h4">Mapa España antiguo</h4>
                             <p class="Articulo-p">Este mapa hará las delicias de aquellos interesados por el pasado de
@@ -84,7 +84,7 @@
                         </div>
                     </article>
                     <article class="Carrousel-articulo Articulo">
-                        <img src="assets/europaantiguo.jpg" alt="Mapa de Europa antiguo" class="Articulo-img">
+                        <img src="assets/europaantiguo.jpg" alt="Mapa de Europa antiguo" class="Articulo-img" loading="lazy">
                         <div class="Articulo-wrap">
                             <h4 class="Articulo-h4">Mapa Europa antiguo</h4>
                             <p class="Articulo-p">Este mapa muestra como era la Europa del siglo XVI con sus diferentes
@@ -96,7 +96,7 @@
                         </div>
                     </article>
                     <article class="Carrousel-articulo Articulo">
-                        <img src="assets/mundifisico.jpg" alt="Mapamundi fisico" class="Articulo-img">
+                        <img src="assets/mundifisico.jpg" alt="Mapamundi fisico" class="Articulo-img" loading="lazy">
                         <div class="Articulo-wrap">
                             <h4 class="Articulo-h4">Mapamundi fisico</h4>
                             <p class="Articulo-p">Mapa del mundo fisico para que puedas comprobar y observar las placas
